version/0.7/_sources/autoapi/ansys/dyna/core/lib/text_card/index.rst.txt
ansys.dyna.core.lib.text_card
=============================

.. py:module:: ansys.dyna.core.lib.text_card


Classes
-------

.. autoapisummary::

   ansys.dyna.core.lib.text_card.TextCard


Module Contents
---------------

.. py:class:: TextCard(name: str, content: str = None, format=format_type.default)

   Bases: :py:obj:`ansys.dyna.core.lib.card_interface.CardInterface`


   
   Abstract base class for all the implementations of keyword cards.
















   ..
       !! processed by numpydoc !!

   .. py:property:: value
      :type: str



   .. py:property:: bounded
      :type: bool


      
      Text cards are always unbounded.
















      ..
          !! processed by numpydoc !!


   .. py:property:: active
      :type: bool


      
      Text cards are always active.
















      ..
          !! processed by numpydoc !!


   .. py:property:: format
      :type: ansys.dyna.core.lib.format_type.format_type


      
      Get the card format type.
















      ..
          !! processed by numpydoc !!


   .. py:method:: read(buf: TextIO, parameter_set: ansys.dyna.core.lib.parameters.ParameterSet = None) -> None

      
      Reads the card data from an input text buffer.
















      ..
          !! processed by numpydoc !!


   .. py:method:: write(format: Optional[ansys.dyna.core.lib.format_type.format_type] = None, buf: Optional[TextIO] = None, comment: Optional[bool] = True) -> str

      
      Renders the card in the dyna keyword format.
      :param buf: Buffer to write to. If None, the output is returned as a string
      :param format: format_type to use. Default to standard.
















      ..
          !! processed by numpydoc !!


